--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="emoji closed active">🙈</div>
+    <div class="emoji open">🙉</div>
     <script src="app.js"></script>
 </body>
 </html>
